--- a/style.css
+++ b/style.css
@@ -15,6 +15,28 @@ body {
   align-items: center;
 }
 
+
+@media (max-width: 400px) {
+  .div {
+    padding: 10px;
+    border-radius: 30px 5px 30px 5px;
+  }
+
+  h1 {
+    font-size: 30px;
+  }
+
+  .head {
+    font-size: 22px;
+  }
+
+  button {
+    font-size: 13px;
+    padding: 8px;
+    margin: 6px;
+  }
+}
+
 .div {
   background-color: rgb(0, 170, 255);
   height: fit-content;
