--- a/style.css
+++ b/style.css
@@ -17,13 +17,13 @@ body {
 
 
 @media (max-width: 300px) {
-  .div {
+  /* .div {
     padding: 5px;
     border-radius: 30px 5px 30px 5px;
-  }
+  } */
 
   h1 {
-    font-size: 12px;
+    font-size: 7px;
   }
 
   .head {
